fix: Height-scaling of `Layout` and `WizardLayout` with `__alerts` visible

--- a/modules/hanna-css/src/css/Layout.scss
+++ b/modules/hanna-css/src/css/Layout.scss
@@ -22,6 +22,8 @@
     max-width: prem($grid-contentMaxWidth);
     margin: 0 auto;
     position: relative;
+    display: flex;
+    flex-flow: column;
   }
 
   .Layout__alerts {
@@ -39,7 +41,7 @@
   }
 
   .Layout__content {
-    min-height: 100vh;
+    flex-grow: 1;
     display: flex;
     flex-flow: column nowrap;
     padding-top: $var--Layout__header-height;
