--- a/modules/hanna-css/src/css/WizardLayout.scss
+++ b/modules/hanna-css/src/css/WizardLayout.scss
@@ -10,6 +10,8 @@
     max-width: prem($grid-contentMaxWidth);
     margin: 0 auto;
     position: relative;
+    display: flex;
+    flex-flow: column;
   }
 
   .WizardLayout__alerts {
@@ -27,7 +29,7 @@
   }
 
   .WizardLayout__content {
-    min-height: 100vh;
+    flex-grow: 1;
     display: flex;
     flex-flow: column nowrap;
     // align-items: center;
